--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "connected-react-router": "^4.4.1",
     "eslint": "^5.2.0",
     "eslint-config-airbnb": "^17.0.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-mocha": "^5.1.0",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
     "gatsby": "^2.23.1",
     "ics": "^2.10.0",
     "markdown-to-jsx": "^6.10.0",
     "moment": "^2.22.2",
+    "prettier": "^2.0.5",
     "react": "^16.5.0",
     "react-big-calendar": "^0.19.2",
     "react-dom": "^16.5.0",
@@ -79,5 +82,18 @@
     "webpack-dev-server": "^2.11.1",
     "webpack-manifest-plugin": "^1.3.2",
     "webpack-merge": "^4.1.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.25%",
+      "not dead",
+      "not op_mini all",
+      "not ie <= 8"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
