--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
     "markdown-to-jsx": "^6.10.0",
     "moment": "^2.22.2",
     "prettier": "^2.0.5",
-    "react": "^16.5.0",
+    "react": "^16.13.1",
     "react-big-calendar": "^0.19.2",
-    "react-dom": "^16.5.0",
-    "react-hot-loader": "^3.1.3",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
+    "react-dom": "^16.13.1",
+    "react-hot-loader": "^4.12.21",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "redux-wait-for-state": "^2.0.0",
-    "semantic-ui-less": "^2.2.12",
-    "semantic-ui-react": "0.82.1"
+    "semantic-ui-less": "^2.4.1",
+    "semantic-ui-react": "^0.88.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.40",
