--- a/package.json
+++ b/package.json
@@ -15,15 +15,33 @@
     "lint": "node_modules/.bin/eslint ./src/ --ext .js,.jsx"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.11",
+    "@mdx-js/react": "^1.6.11",
     "connected-react-router": "^4.4.1",
     "gatsby": "^2.23.1",
+    "gatsby-plugin-advanced-sitemap": "^1.5.5",
+    "gatsby-plugin-mdx": "^1.2.27",
+    "gatsby-plugin-offline": "^3.2.18",
+    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-plugin-sharp": "^2.6.19",
+    "gatsby-remark-images": "^3.3.19",
+    "gatsby-remark-prismjs": "^3.5.10",
+    "gatsby-remark-reading-time": "^1.1.0",
+    "gatsby-source-filesystem": "^2.3.20",
+    "gatsby-transformer-remark": "^2.8.25",
+    "gatsby-transformer-sharp": "^2.5.11",
     "ics": "^2.10.0",
     "markdown-to-jsx": "^6.10.0",
     "moment": "^2.22.2",
+    "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
+    "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-big-calendar": "^0.19.2",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.12.21",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
