--- a/package.json
+++ b/package.json
@@ -20,22 +20,22 @@
     "connected-react-router": "^4.4.1",
     "gatsby": "^2.23.1",
     "gatsby-plugin-advanced-sitemap": "^1.5.5",
+    "gatsby-plugin-less": "^4.0.2",
     "gatsby-plugin-mdx": "^1.2.27",
     "gatsby-plugin-offline": "^3.2.18",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.6.19",
     "gatsby-remark-images": "^3.3.19",
     "gatsby-remark-prismjs": "^3.5.10",
     "gatsby-remark-reading-time": "^1.1.0",
+    "gatsby-remark-responsive-iframe": "^2.4.11",
     "gatsby-source-filesystem": "^2.3.20",
     "gatsby-transformer-remark": "^2.8.25",
     "gatsby-transformer-sharp": "^2.5.11",
     "ics": "^2.10.0",
     "markdown-to-jsx": "^6.10.0",
     "moment": "^2.22.2",
-    "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
