--- a/package.json
+++ b/package.json
@@ -58,10 +58,8 @@
     "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
     "babel-polyfill": "^6.26.0",
-    "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "chalk": "^2.3.1",
     "cross-env": "^5.1.3",
-    "css-loader": "^1.0.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^6.11.0",
@@ -70,29 +68,13 @@
     "eslint-plugin-mocha": "^5.1.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.9",
     "fs-extra": "^5.0.0",
     "gh-pages": "^1.2.0",
-    "html-webpack-plugin": "2.30.1",
-    "ignore-loader": "^0.1.2",
     "js-yaml": "^3.13.1",
     "junit-report-builder": "^1.3.1",
     "less": "2.7.2",
-    "less-loader": "^4.0.5",
     "node-fetch": "^2.2.0",
-    "postcss-flexbugs-fixes": "^3.3.0",
-    "postcss-loader": "^2.1.0",
-    "raw-loader": "^0.5.1",
-    "react-dev-utils": "^5.0.2",
-    "style-loader": "^0.20.2",
-    "uglifyjs-webpack-plugin": "^1.2.0",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.11.0",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-manifest-plugin": "^1.3.2",
-    "webpack-merge": "^4.1.1"
+    "react-dev-utils": "^5.0.2"
   },
   "browserslist": {
     "production": [
