--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-remark-prismjs": "^3.5.10",
     "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-remark-responsive-iframe": "^2.4.11",
+    "gatsby-remark-source-name": "^1.0.0",
     "gatsby-source-filesystem": "^2.3.20",
     "gatsby-transformer-remark": "^2.8.25",
     "gatsby-transformer-sharp": "^2.5.11",
