--- a/src/_events/2020-eternal-blue-workshop/manifest.yml
+++ b/src/_events/2020-eternal-blue-workshop/manifest.yml
@@ -1,5 +1,5 @@
 - id: 2020-eternal-blue-workshop
-  name: Eternal Blue Machine Workshop
+  name: Eternal Blue Machine workshop
   start: '2020-10-23 19:00:00'
   end: '2020-10-23 20:30:00'
   location: An internet connection near you
