Added Tarball from Soctor Who
SoctorWho/SoctorWho.github.io@da4ed96aa37f6badb1a6b96ab37b50cadc17d1f0

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,2 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-
-# production
-/build
-
-# misc
-.DS_Store
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# VSCode
-/.vscode
-
-# Events manifest
-/src/_events/eventsManifest.json
+content/code-of-conduct.md
+public/*
