--- a/data/committee.yml
+++ b/data/committee.yml
@@ -5,4 +5,4 @@ members:
       image: /img/team/PeterTaylor.png
       website: https://pmy.pt3.uk
       twitter: https://twitter.com/pmypt3
-      email: pmy@pt3.uk
+      email: peter.taylor@hacksocnotts.co.uk
