add twitter link

--- a/config.yml
+++ b/config.yml
@@ -59,7 +59,7 @@ menu:
           url: /code-of-conduct
         - identifier: twitter
           name: Twitter
-          url: https://twitter.com/SoctorWho
+          url: https://twitter.com/HackSocNotts
         - identifier: constitution
           name: Constitution
           url: /u/constitution.pdf
