Added Liam to the site

--- a/data/committee.yml
+++ b/data/committee.yml
@@ -27,6 +27,7 @@ members:
     - identifier: speaker-sec
       title: Speaker Acquisition Secretary
       name: Liam-Elio Colabuono-McDonagh
+      image: /img/team/LiamECM.jpg
       email: liam-e.c-m@hacksocnotts.co.uk
     - identifier: cyber-sec
       title: Cyber Security Secretary
