--- a/config.yml
+++ b/config.yml
@@ -56,7 +56,7 @@ menu:
     footer:
         - identifier: code-of-conduct
           name: Code of Conduct
-          url: /code-of-conduct
+          url: https://hacksoc.net/code-of-conduct
           weight: 6
         - identifier: twitter
           name: Twitter
@@ -64,7 +64,7 @@ menu:
           weight: 2
         - identifier: constitution
           name: Constitution
-          url: /u/constitution.pdf
+          url: https://hacksoc.net/constitution.pdf
           weight: 4
         - identifier: committee
           name: Committee
