--- a/config.yml
+++ b/config.yml
@@ -73,6 +73,10 @@ menu:
         - identifier: events
           name: All Events
           url: /events
+          weight: 9
+        - identifier: awesome-talks
+          name: Awesome Talks
+          url: /awesome-talks
           weight: 10
         - identifier: github
           name: GitHub
