--- a/config.yml
+++ b/config.yml
@@ -1,112 +1,21 @@
-baseURL: "https://hacksocnotts.co.uk/"
-title: HackSoc
-paginate: 3
-theme: soctor-who-theme
+baseURL: 'http://hacksocnotts.co.uk/'
+languageCode: 'en-us'
+title: 'HackSoc'
 
-enableInlineShortcodes: true
 enableRobotsTXT: true
-buildDrafts: false
 buildFuture: true
-buildExpired: false
 
-minify:
-    disableXML: true
-    # minifyOutput: true
+params:
+  description: "HackSoc Nottingham"
+  author: "HackSoc Committee"
+  logoPath: "/img/logo.svg"
 
 outputs:
-    home:
-        - HTML
-        - RSS
-        - JSON
-    section:
-        - Calendar
-        - HTML
-        - JSON
-    page:
-        - HTML
-        - JSON
-        
-params:
-    env: production # to enable google analytics, opengraph, twitter-cards and schema.
-    description: "HackSoc Nottingham"
-    author: HackSoc Committee
-    #images: ["./images/logo.png"]
-    #assets:
-    #    favicon: "/icon.svg"
-
-
-    fuseOpts:
-        isCaseSensitive: false
-        shouldSort: false
-        location: 0
-        distance: 1000
-        threshold: 0.4
-        minMatchCharLength: 0
-        keys: ["title", "permalink", "summary", "content"]
-
-    logoPath: /img/logo.svg
-    joinURL: https://www.su.nottingham.ac.uk/societies/society/hack/
-
-menu:
-    main:
-        - identifier: hacknotts
-          name: HackNotts
-          url: https://hacknotts.com/
-          weight: 10
-    footer:
-        - identifier: code-of-conduct
-          name: Code of Conduct
-          url: https://hacksoc.net/code-of-conduct
-          weight: 6
-        - identifier: twitter
-          name: Twitter
-          url: https://twitter.com/HackSocNotts
-          weight: 2
-        - identifier: constitution
-          name: Constitution
-          url: https://hacksoc.net/constitution
-          weight: 4
-        - identifier: committee
-          name: Committee
-          url: /committee
-          weight: 5
-        - identifier: events
-          name: All Events
-          url: /events
-          weight: 10
-        - identifier: github
-          name: GitHub
-          url: https://github.com/HackSocNotts
-          weight: 1
-        - identifier: facebook
-          name: Facebook
-          url: https://www.facebook.com/hacksocnotts/
-          weight: 3
-taxonomies:
-    category: categories
-    tag: tags
-    series: series
-
-privacy:
-    vimeo:
-        disabled: false
-        simple: true
-
-    twitter:
-        disabled: false
-        enableDNT: true
-        simple: true
-
-    instagram:
-        disabled: false
-        simple: true
-
-    youtube:
-        disabled: false
-        privacyEnhanced: true
-
-services:
-    instagram:
-        disableInlineCSS: true
-    twitter:
-        disableInlineCSS: true
+  home:
+    - HTML
+  section:
+    - Calendar
+    - HTML
+    - JSON
+  page:
+    - HTML
