Fix Quang's email, set static aspect ratio on images

--- a/data/committee.yml
+++ b/data/committee.yml
@@ -29,9 +29,9 @@ members:
       title: Trips Officer
       name: Qiang Cai
       image: /img/committee/qiang.png
-      email: isaac.destura@hacksocnotts.co.uk
+      email: qiang.cai@hacksocnotts.co.uk
     - identifier: marketing
       title: Marketing Secretary
       name: Joseph Heyes
-      image: /img/committee/joseph.png
+      image: /img/committee/joseph.jpg
       email: joseph.heyes@hacksocnotts.co.uk
