--- a/data/committee.yml
+++ b/data/committee.yml
@@ -18,7 +18,7 @@ members:
     - identifier: devsec
       title: Development Secretary
       name: James Harvey
-      image: /img/committee/james.png
+      image: /img/committee/james.jpg
       email: james.harvey@hacksocnotts.co.uk
     - identifier: speaker
       title: Speaker Acquisition Secretary
