--- a/data/committee.yml
+++ b/data/committee.yml
@@ -35,3 +35,13 @@ members:
       name: Joseph Heyes
       image: /img/committee/joseph.jpg
       email: joseph.heyes@hacksocnotts.co.uk
+    - identifier: welfare
+      title: Welfare Secretary
+      name: Mark Fannon
+      image: /img/committee/mark.jpg
+      email: mark.fannon@hacksocnotts.co.uk
+    - identifier: working-groups
+      title: Working Groups Secretary
+      name: Andrew Navida
+      image: /img/committee/andrew.jpg
+      email: andrew.navida@hacksocnotts.co.uk
