Add rest of committee

--- a/data/committee.yml
+++ b/data/committee.yml
@@ -23,7 +23,7 @@ members:
     - identifier: speaker
       title: Speaker Acquisition Secretary
       name: Isaac Destura
-      image: /img/committee/isaac.png
+      image: /img/committee/isaac.jpg
       email: isaac.destura@hacksocnotts.co.uk
     - identifier: trips
       title: Trips Officer
