Adding Manasi as Committee member

--- a/data/committee.yml
+++ b/data/committee.yml
@@ -11,9 +11,9 @@ members:
       email: eva.davis@hacksocnotts.co.uk
     - identifier: treasurer
       title: Treasurer
-      name: Nathan Burgess
-      image: /img/committee/nathan.jpg
-      email: nathan.burgess@hacksocnotts.co.uk
+      name: Manasi Mehta
+      image: /img/committee/manasi.jpg
+      email: manasi.mehta@hacksocnotts.co.uk
     - identifier: devsec
       title: Development Secretary
       name: James Harvey
