--- a/data/committee.yml
+++ b/data/committee.yml
@@ -36,9 +36,9 @@ members:
       email: joseph.heyes@hacksocnotts.co.uk
     - identifier: welfare
       title: Welfare Secretary
-      name: Mark Fannon
-      image: /img/committee/mark.jpg
-      email: mark.fannon@hacksocnotts.co.uk
+      name: Lana Valentine
+      image: /img/committee/lana.jpg
+      email: lana.valentine@hacksocnotts.co.uk
     - identifier: working-groups
       title: Working Groups Secretary
       name: Andrew Navida
