--- a/data/committee.yml
+++ b/data/committee.yml
@@ -40,7 +40,7 @@ members:
       name: Oli Sharp
       image: /img/committee/oli.jpeg
       image_alt: /img/committee-bebe/olibebe.jpeg
-      email: amber.swarbrick@hacksocnotts.co.uk
+      email: oli.sharp@hacksocnotts.co.uk
     - identifier: welfare
       title: Welfare Secretary
       name: Elizabeth Hickmott
