Corrected current and past committee position spelling for 'Aquisition' -> 'Acquisition'

--- a/data/committee.yml
+++ b/data/committee.yml
@@ -49,7 +49,7 @@ members:
       image_alt: /img/committee-bebe/olibebe.jpeg
       email: oli.sharp@hacksocnotts.co.uk
     - identifier: speaker
-      title: Speaker Aquisition Secretary
+      title: Speaker Acquisition Secretary
       name: Trey Balfour-Allette
       image: /img/committee/trey.jpg
       email: trey.balfour-allette@hacksocnotts.co.uk
