--- a/data/committee.yml
+++ b/data/committee.yml
@@ -49,7 +49,7 @@ members:
       image_alt: /img/committee-bebe/olibebe.jpeg
       email: oli.sharp@hacksocnotts.co.uk
     - identifier: speaker
-      title: Speaker Aquisition Secretary
+      title: Speaker acquisition Secretary
       name: Tom Piercy
       image: /img/committee/tom.jpeg
       image_alt: /img/committee-bebe/tombebe.jpeg
