--- a/data/committee.yml
+++ b/data/committee.yml
@@ -52,5 +52,5 @@ members:
       title: Speaker Acquisition Secretary
       name: Tom Piercy
       image: /img/committee/tom.jpeg
-      image_alt: /img/committee-bebe/tombebe.jpeg
+      image_alt: /img/committee-bebe/tombebe.jpg
       email: tom.piercy@hacksocnotts.co.uk
